--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -13,7 +13,7 @@ layout: default
 {% endunless %}
 {% if site.disqus_short_name and page.comments == true %}
 <section id="comment">
-    <h1 class="title">Comments</h1>
+    <h1 class="title">Komentoj</h1>
     <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
 </section>
 {% endif %}
