Add about me page

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,7 +1,7 @@
 <!-- use full url including 'index.html' for navigation bar if you are using ajax -->
 <ul id="nav">
 	<li id="ajax"><a href="{{ root_url }}/index.html">Hejmo</a></li>
-	<li id="ajax"><a href="{{ root_url }}/blogo/pri-mi/">Pri mi</a></li>
+	<li id="ajax"><a href="{{ root_url }}/pri-mi/">Pri mi</a></li>
 	<li id="ajax"><a href="{{ root_url }}/blogo/arhivoj">Arĥivoj</a></li>
     <li><a href="{{ root_url }}/atom.xml">RSS</a></li>
     {% if site.simple_search %}
