--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="eo" xml:lang="eo">
 <head>
 	<meta charset="utf-8">
 	<title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
@@ -22,9 +22,9 @@
 
     <script type="text/javascript" src="{{ root_url }}/javascripts/jquery-tapir.js"></script>
 
-    <!-- remove or comment it to disable ajaxification -->   
+    <!-- remove or comment it to disable ajaxification -->
     <script src="/javascripts/ajaxify.js"></script>
-   
+
     {% include custom/head.html %}
     {% include google_analytics.html %}
 </head>
