--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -11,7 +11,7 @@
 
 	<link href="{{ site.subscribe_rss }}" rel="alternate" title="{{site.title}}" type="application/atom+xml">
 	<link rel="canonical" href="{{ canonical }}">
-	<link href="{{ root_url }}/favicon.ico" rel="shortcut icon">
+	<link href="{{ root_url }}/favicon.png" rel="shortcut icon">
     <link href="{{ root_url }}/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
 
     <link href='http://fonts.googleapis.com/css?family=Slackey' rel='stylesheet' type='text/css'>
